# SMC

./: CMakeLists.txt  README.md  main.cpp
DOCUMENTATION/: DOCUMENTATION.md
cpp/console/: color_console.cpp
cpp/date/: date.cpp
cpp/fs/: DIRMAKE.cpp  FILEC.cpp  FILEDC.cpp  FILEDEL.cpp  FILEFF.cpp  FILEFIND.cpp  FILEMAKE.cpp  FILEO.cpp  FILEOPEN.cpp  FILERMV.cpp  MOVE.cpp  copy.cpp  disk.cpp  explorer.cpp  space.cpp
cpp/helper/: helper.cpp  path_ff.cpp
cpp/helper/Hfs/: HFILEF.cpp
cpp/text/: io_text.cpp
header/console/: color_console.h
header/date/: date.h  include_date.h
header/fs/: FILEC.hpp  FILEDC.hpp  FILEDEL.h  FILEFF.h  FILEFIND.h  FILEMAKE.hpp  FILEO.h  FILEOPEN.h  FILERMV.h  MOVE.h  copy.h  disk.h  explorer.h  include_fs.h  space.h
header/helper/: helper.h  path_ff.h
header/helper/Helperfs/: HFILEF.h
header/helper/Hfs/: HFILEF.h
header/text/: include_io_text.h  io_text.h
